# ehall-frontend

./: .gitignore  README.md  build.sh  rust-toolchain.toml
Ehall/: ContentView.swift  EhallApp.swift
Ehall.xcodeproj/: project.pbxproj
Ehall/Account/: AccountNavigationStack.swift  DismissButton.swift  LoginView.swift
Ehall/Home/: HomeNavigationStack.swift
Ehall/Items/: CourseItem.swift
Ehall/Models/: EhallData.swift
Ehall/Navigation/: AppScreen.swift  Sidebar.swift
Ehall/Networking/: RequestFromApi.swift
Ehall/Score/: ScoreCard.swift  ScoreCardGrid.swift  ScoreDetailView.swift  ScoreNavigationStack.swift
Ehall/Trash/: TrashView.swift
Ehall/ViewModel/: ScoreViewModel.swift
EhallTests/: EhallTests.swift
ehall-networking/: Cargo.toml  Makefile  build.rs.bak  build.sh
ehall-networking/bindings/: ehallNetworking.py  ehallNetworking.rb  ehallNetworking.swift  ehallNetworkingFFI.h
ehall-networking/bindings/include/: module.modulemap
ehall-networking/bindings/kotlin/uniffi/ehall_networking/: ehall_networking.kt
ehall-networking/bindings/python/: ehall_networking.py
ehall-networking/bindings/swift/: ehall_networking.swift  ehall_networkingFFI.h  ehall_networkingFFI.modulemap
ehall-networking/bindings/uniffi/ehallNetworking/: ehallNetworking.kt
ehall-networking/ehall_networking_framework.xcframework/: Info.plist
ehall-networking/src/: auth.rs  ehall-networking.udl  info.rs  lib.rs  score.rs
ehall-swift/: NOTES.md  buildServer.json
ehall-swift/Ehall/: ContentView.swift  CoursesList.swift  (+1 more)
ehall-swift/Ehall.xcodeproj/: project.pbxproj
(+39 files in other folders)
