[package]
name = "ehall-networking"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi = { version = "0.26", features = ["cli"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
uniffi = { version = "0.26", features = ["build", "bindgen"] }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# [[bin]]
# name = "uniffi-bindgen"
# path = "uniffi-bindgen.rs"
